feat: add elements

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -525,7 +525,7 @@
             <h2 class="title mb-30">
                 Документы
             </h2>
-            <div class="links-doc">
+            <div class="list-articles">
                 <a class="article-doc" href="">
                     <div class="article-doc__main">
                         <p>Свидетельство о государственной перерегистрации юридического лица</p>
