--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -19,6 +19,11 @@
                     <h1 class="title mb-15">
                         Контакты
                     </h1>
+                    <a href="" class="link-social">
+                        <svg class="link-social__icon">
+                            <use xlink:href="./assets/sprite/sprite.svg#icon-vk"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
