--- a/src/pages/handbook.html
+++ b/src/pages/handbook.html
@@ -651,27 +651,27 @@
                         <div class="swiper-container slider__container slider__container--overflow">
                             <div class="swiper-wrapper slider__wrapper">
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="" class="article-gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="" class="article-gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="" class="article-gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="" class="article-gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="" class="article-gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
