--- a/src/pages/single-post.html
+++ b/src/pages/single-post.html
@@ -95,48 +95,148 @@
             </div>
         </div>
     </section>
-    <section class="section">
+    <section class="section z-index-1 mb-80 mbm-70">
         <div class="container">
-            <!-- Дестрой на планшете и мобилке -->
             <div class="slider" data-slider="services">
-                <div class="toolbar mb-30">
+                <div class="toolbar mb-25">
                     <h2 class="title">
                         Сопутствующие услуги
                     </h2>
-                    <div data-nav>
-                        <button data-button-prev>
-                            Назад
+                    <div class="nav-slider tab-hide" data-nav>
+                        <button class="button-nav" data-button-prev>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-left"></use>
+                            </svg>
                         </button>
-                        <button data-button-next>
-                            Вперед
+                        <button class="button-nav" data-button-next>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-right"></use>
+                            </svg>
                         </button>
                     </div>
                 </div>
                 <div class="swiper-container slider__container">
                     <div class="swiper-wrapper slider__wrapper">
-                        <div class="swiper-slide slider__slide">
-                            1
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Складское хранение
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="swiper-slide slider__slide">
-                            2
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Страхование рисков" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Страхование рисков
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="swiper-slide slider__slide">
-                            3
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Страхование рисков" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Длинный заголовок в несколько строк текста, чтобы увидеть пример, как это
+                                        работает
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="swiper-slide slider__slide">
-                            4
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Складское хранение
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="swiper-slide slider__slide">
-                            5
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Страхование рисков" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Страхование рисков
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                        <div class="swiper-slide slider__slide">
-                            6
-                        </div>
-                        <div class="swiper-slide slider__slide">
-                            7
-                        </div>
-                        <div class="swiper-slide slider__slide">
-                            8
+                        <div class="swiper-slide slider__slide slider__slide--service">
+                            <a class="article-service article-service--slide" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Страхование рисков" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Таможенное оформление
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="slider__progressbar progressbar"></div>
@@ -144,8 +244,8 @@
             </div>
         </div>
     </section>
+    <%= htmlWebpackPlugin.options.sectionPartners %>
 </main>
-<%= htmlWebpackPlugin.options.sectionPartners %>
 <%= htmlWebpackPlugin.options.sectionFooter %>
 <%= htmlWebpackPlugin.options.temp %>
 </body>
