--- a/src/pages/single-project.html
+++ b/src/pages/single-project.html
@@ -8,7 +8,7 @@
 
 <body class="body">
 <%= htmlWebpackPlugin.options.sectionHeader %>
-<main class="main">
+<main class="main decor-projects">
     <section class="section pt-95 mb-80">
         <div class="container">
             <article class="article-intro">
@@ -47,6 +47,79 @@
                             промышленности.
                         </p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section mb-80">
+        <div class="container">
+            <div class="slider" data-slider="project">
+                <div class="toolbar toolbar--project mb-20 relative z-index-2">
+                    <h2 class="title">
+                        Этапы решения
+                    </h2>
+                    <div class="nav-slider tab-hide" data-nav>
+                        <button class="button-nav" data-button-prev>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-left"></use>
+                            </svg>
+                        </button>
+                        <button class="button-nav" data-button-next>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-right"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide">
+                            <article class="article-project">
+                                <picture class="article-project__picture">
+                                    <img src="./assets/content/placeholder.svg" alt="">
+                                </picture>
+                                <div class="article-project__content">
+                                    <div class="editor fz-14 fz-mob-16">
+                                        <h3>
+                                            Выбор транспорта
+                                        </h3>
+                                        <p>
+                                            Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и рефрижераторных грузов.
+                                            Сопутствующие таможенные формальности в странах отправления и назначения грузов.
+                                            Доставку опасных и негабаритных грузов.
+                                            Консолидацию и обработку сборных грузов на собственных складах в странах ЕС, Москве и Калининграде.
+                                            Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и рефрижераторных грузов.Сопутствующие таможенные
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="swiper-slide slider__slide">
+                            <article class="article-project">
+                                <picture class="article-project__picture">
+                                    <img src="./assets/content/placeholder.svg" alt="">
+                                </picture>
+                                <div class="article-project__content">
+                                    <div class="editor fz-14 fz-mob-16">
+                                        <h3>
+                                            Выбор транспорта
+                                        </h3>
+                                        <p>
+                                            Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и рефрижераторных грузов.
+                                            Сопутствующие таможенные формальности в странах отправления и назначения грузов.
+                                            Доставку опасных и негабаритных грузов.
+                                            Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и рефрижераторных грузов.
+                                            Сопутствующие таможенные формальности в странах отправления и назначения грузов.
+                                            Доставку опасных и негабаритных грузов.
+                                            Консолидацию и обработку сборных грузов на собственных складах в странах ЕС, Москве и Калининграде.
+                                            Автомобильные перевозки в странах ЕС, России и СНГ, в том числе сборных и рефрижераторных грузов.Сопутствующие таможенные
+                                        </p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="slider__progressbar progressbar"></div>
                 </div>
             </div>
         </div>
@@ -192,6 +265,114 @@
                             <picture class="article-gallery">
                                 <img src="./assets/content/item-gallery-4.jpg" alt="Заголовок изображения">
                             </picture>
+                        </div>
+                    </div>
+                    <div class="slider__progressbar progressbar"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section mb-150 mbm-80">
+        <div class="container">
+            <div class="slider" data-slider="projectsAnother">
+                <div class="toolbar mb-20">
+                    <h2 class="title">
+                        Галерея
+                    </h2>
+                    <div class="nav-slider tab-hide" data-nav>
+                        <button class="button-nav" data-button-prev>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-left"></use>
+                            </svg>
+                        </button>
+                        <button class="button-nav" data-button-next>
+                            <svg class="button-nav__icon">
+                                <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-right"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-container slider__container">
+                    <div class="swiper-wrapper slider__wrapper">
+                        <div class="swiper-slide slider__slide slider__slide--project slider__slide--project-l">
+                            <a class="article-service" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Перевозка сверхнегабаритного груза весом 320 т" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Перевозка сверхнегабаритного груза весом 320 т
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--project slider__slide--project-sm">
+                            <a class="article-service" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Мультимодальная перевозка карьерного экскаватора P&H 4100" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Мультимодальная перевозка карьерного экскаватора P&H 4100
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--project slider__slide--project-l">
+                            <a class="article-service" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Мультимодальная перевозка карьерного экскаватора P&H 4100" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Мультимодальная перевозка карьерного экскаватора P&H 4100
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper-slide slider__slide slider__slide--project slider__slide--project-sm">
+                            <a class="article-service" href="">
+                                <picture class="article-service__picture">
+                                    <img alt="Складское хранение" src="./assets/content/placeholder.svg">
+                                </picture>
+                                <div class="article-service__content">
+                                    <h3 class="article-service__title">
+                                        Складское хранение
+                                    </h3>
+                                    <div class="article-service__toolbar">
+                                        <span class="article-service__link">
+                                            Подробнее
+                                        </span>
+                                        <svg class="article-service__icon">
+                                            <use xlink:href="./assets/sprite/sprite.svg#icon-arrow-review"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="slider__progressbar progressbar"></div>
